#10147 closed bug (fixed)
Haiku doesn't boot from ISO and anyboot image with HDD attached
Reported by: | post-factum | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Booting Haiku 46295 in qemu from ISO image or anyboot with HDD attached results in kernel panic (see screenshot attached). It boots OK without HDD.
Some additional info:
➜ Haiku qemu --version QEMU emulator version 1.6.1, Copyright (c) 2003-2008 Fabrice Bellard ➜ Haiku uname -a Linux spock 3.11.4-pf #1 SMP PREEMPT Mon Oct 21 17:42:04 EEST 2013 x86_64 GNU/Linux
Command to launch Haiku:
qemu -cdrom haiku-nightly.iso -hda sda.img -boot c -m 512 -smp 2 -usb
sda.img is qcow2 16 GiB empty HDD.
How that could be fixed?
Attachments (1)
Change History (8)
by , 11 years ago
Attachment: | haiku_boot_failure.png added |
---|
comment:1 by , 11 years ago
Quick fix: I use the following command to launch qemu:
qemu -cdrom haiku-nightly.iso -hda sda.img -boot d -m 512 -smp 2 -usb
But that doesn't matter. The same issue is with VirtualBox 4.3.0 :(.
comment:2 by , 11 years ago
I had the same with anyboot image on virtualbox on mac. Had to download the vmdk file and it worked. rev 46295
comment:3 by , 11 years ago
Can confirm with VBox 4.3 with the last 2 latest "official" builds. gonna try 46263 and see if the issue dates back that far.
Haiku fails to boot in qemu